Added character pictures

--- a/client/game.html
+++ b/client/game.html
@@ -10,6 +10,7 @@
             Description: {{ description }}
           </div>
         </div>
+    <img src="{{ char_img }}" height="42" width="42">
     </div>
   </div>
 
@@ -56,7 +57,9 @@
         <div class="player-status player-status-not-werewolf">You're the {{player.role}}</div>
         <div class="current-location">
         </div>
+    <img src="{{ char_img }}" height="42" width="42">
     </div>
+
   </div>
 
   <h5>Players</h5>
@@ -162,6 +165,7 @@
         <div class="player-status player-status-not-werewolf">You're the {{player.role}}</div>
         <div class="current-location">
         </div>
+    <img src="{{ char_img }}" height="42" width="42">
     </div>
   </div>
 
