--- a/client/createGame.html
+++ b/client/createGame.html
@@ -1,11 +1,14 @@
 <template name="createGame">
-  <h4>
+
     {{#if isLoading }}
       <span class="spinner"></span>
     {{else}}
-      Werewolf for smartphones
+     <div class="main-menu">
+      <img src="img/werewolf_menu.png" height="110" width="110">
+      <h4>Werewolf for smartphones</h4>
+    </div>
     {{/if}}
-  </h4>
+
 
   <hr>
 
