--- a/client/joinGame.html
+++ b/client/joinGame.html
@@ -3,7 +3,10 @@
     {{#if isLoading }}
       <span class="spinner"></span>
     {{else}}
-      Werewolf for smartphones
+      <div class="main-menu">
+      <img src="img/werewolf_menu.png" height="110" width="110">
+      <h4>Werewolf</h4>
+    </div>
     {{/if}}
   </h4>
 
