--- a/client/main.html
+++ b/client/main.html
@@ -50,7 +50,7 @@
 <template name="startMenu">
   <div class="main-menu">
     <img src="img/werewolf_menu.png" height="110" width="110">
-    <h4>Werewolf for smartphones</h4>
+    <h4>Werewolf Party Game</h4>
 
     <hr>
 
