--- a/client/joinGame.html
+++ b/client/joinGame.html
@@ -5,7 +5,7 @@
     {{else}}
       <div class="main-menu">
       <img src="img/werewolf_menu.png" height="110" width="110">
-      <h4>Werewolf</h4>
+      <h4>Werewolf Party Game</h4>
     </div>
     {{/if}}
   </h4>
