--- a/client/main.html
+++ b/client/main.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" href="css/skeleton.css" type="text/css">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-4214859614114351",
+            enable_page_level_ads: true
+       });
+  </script>
 </head>
 
 <body></body>
